@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2005 rPath, Inc.
+# Copyright (c) 2005,2007 rPath, Inc.
 #
 # This program is distributed under the terms of the Common Public License,
 # version 1.0. A copy of this license should have been distributed with this
@@ -14,9 +14,12 @@
 
 python_files = conarybugz.py
 
-extra_dist = Makefile rpm2cpio changemail.py commitaction conary-debug perlreqs.pl dbsh dumpcontainer showchangeset localupdateinfo mirror ccs2tar md5pw logcat findmissingbuildreqs
+extra_dist = Makefile changemail.py commitaction perlreqs.pl findmissingbuildreqs
 
-dist_files = $(python_files) $(extra_dist)
+bin_scripts = rpm2cpio dbsh conary-debug ccs2tar
+util_scripts = dumpcontainer localupdateinfo mirror md5pw showchangeset logcat listcachedir
+
+dist_files = $(python_files) $(extra_dist) $(bin_scripts) $(util_scripts)
 
 SUBDIRS	= migration
 
@@ -25,20 +28,12 @@ all: default-subdirs default-all
 install:
 	# see conary-wrapper symlink in ../Makefile to make scripts
 	# available in $(bindir)
-	install -m 755 dbsh $(DESTDIR)$(bindir)
-	install -m 755 rpm2cpio $(DESTDIR)$(bindir)
-	install -m 755 conary-debug $(DESTDIR)$(bindir)
+	install -m 755 $(bin_scripts) $(DESTDIR)$(bindir)
+	mkdir -p $(DESTDIR)$(datadir)/conary
+	install -m 755 $(util_scripts) $(DESTDIR)$(datadir)/conary
 	install -m 755 conarybugz.py $(DESTDIR)$(conarydir)
 	install -m 755 commitaction $(DESTDIR)$(conarydir)
 	install -m 755 changemail.py $(DESTDIR)$(conarydir)
-	mkdir -p $(DESTDIR)$(datadir)/conary
-	install -m 755 dumpcontainer $(DESTDIR)$(datadir)/conary
-	install -m 755 localupdateinfo $(DESTDIR)$(datadir)/conary
-	install -m 755 mirror $(DESTDIR)$(datadir)/conary
-	install -m 755 md5pw $(DESTDIR)$(datadir)/conary
-	install -m 755 ccs2tar $(DESTDIR)$(bindir)
-	install -m 755 showchangeset $(DESTDIR)$(datadir)/conary
-	install -m 755 logcat $(DESTDIR)$(datadir)/conary
 	mkdir -p $(DESTDIR)$(conarylibexecdir)
 	install -m 755 perlreqs.pl $(DESTDIR)$(conarylibexecdir)
 
