@@ -1,3 +1,8 @@
+Changes in @NEW@:
+  o New Features
+    * The listcachedir script has been added to help with maintenance
+      tasks for the repository changeset cache (CNY-1469)
+
 Changes in 1.1.25:
   o New Feature:
     * Conary now supports a "searchPath" configuration option, which
